k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-boilerplate
  namespace: angular-boilerplate
  labels:
    app: angular-boilerplate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-boilerplate
  template:
    metadata:
      labels:
        app: angular-boilerplate
    spec:
      containers:
        - name: angular-boilerplate
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            successThreshold: 3
