k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-boilerplate-service
  namespace: angular-boilerplate
spec:
  selector:
    app: angular-boilerplate
  type: NodePort
  ports:
    - name: angular-boilerplate-port
      protocol: TCP
      port: 8080
      targetPort: 80
