k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-boilerplate-ingress
  namespace: angular-boilerplate
  annotations:
  # (Optional): Annotations for the Ingress Controller
  # -- ingress class is needed when traefik is not the default
  # kubernetes.io/ingress.class: traefik
  # ---
  # -- entrypoint and tls configurations
  # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  # traefik.ingress.kubernetes.io/router.tls: "true"
  # ---
  # -- optional middlewares
  # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
  # ---
spec:
  rules:
    - host: "devops.home"
      http:
        paths:
          - path: /angular-boilerplate
            pathType: Prefix
            backend:
              service:
                name: angular-boilerplate-service
                port:
                  number: 8080
  # (Optional) TLS settings
  # tls:
  # - hosts:
  #   - your-hostname.com  # Your hostname
  #   secretName: your-secret  # Your TLS Secret
  # ---
